# ratkinia-server

./: .gitignore  CMakeLists.txt  MainServer.cpp  MainServer.h  MessagePrinter.h  NetworkServer.cpp  NetworkServer.h  README.md  main.cpp
Source/: ActorEnvironment.cpp  ActorEnvironment.h  ActorMessageDispatcher.cpp  ActorMessageDispatcher.h  ActorNetworkInterface.cpp  ActorNetworkInterface.h  ActorRegistry.cpp  ActorRegistry.h  AuthJob.h  Channel.h  Component.h  ComponentManager.h  Context.h  CtsStub.cpp  CtsStub.h  Database.h  DatabaseManager.cpp  DatabaseManager.h  Entity.h  EntityManager.cpp  EntityManager.h  Environment.h  ErrorMacros.h  EventManager.cpp  EventManager.h  Executor.h  Field.cpp  Field.h  GlobalObject.h  GlobalObjectManager.cpp  GlobalObjectManager.h  GlobalObjectRegistrar.cpp  GlobalObjectRegistrar.h  InternalActorMessage.h  Main.cpp  MainServer.cpp  MainServer.h  Manager.h  MessagePrinter.h  MpscMessageBodyPool.h  (+18 more)
Source/Actor/: A_Auth.cpp  A_Auth.h  Actor.cpp  Actor.h  ActorFacade.cpp  ActorFacade.h  ActorRegistry.cpp  ActorRegistry.h
Source/Component/: C_HumanLikeBody.h  C_NameTag.h  Component.h  ComponentManager.h  ComponentRegistrar.cpp  ComponentRegistrar.h
Source/Database/: D_Accounts.cpp  D_Accounts.h  D_Components.cpp  D_Components.h  D_PlayerCharacters.cpp  D_PlayerCharacters.h  Database.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseRegistrar.cpp  DatabaseRegistrar.h  DatabaseServer.cpp  DatabaseServer.h  DbConnection.cpp  DbConnection.h  DbConnectionPool.cpp  DbConnectionPool.h  DbService.cpp  DbService.h  DbService_Account.cpp  DbService_Account.h  T_Accounts.cpp  T_Accounts.h  T_PlayerCharacters.cpp  T_PlayerCharacters.h  Table.h
Source/Event/: EventManager.h  EventQueue.h  EventRegistrar.cpp  EventRegistrar.h  Event_SessionErased.h
Source/Floweryclover/: ParallelExecutor.h
Source/GlobalObject/: G_Auth.cpp  G_Auth.h  G_PersistenceTimer.h  G_PlayerCharacters.cpp  G_PlayerCharacters.h  G_Possession.cpp  G_Possession.h  GlobalObject.h  GlobalObjectManager.h  GlobalObjectRegistrar.cpp  GlobalObjectRegistrar.h
Source/Message/: Message.h  Msg_Cts.h  Msg_SessionDisconnected.h  Msg_Weird.h
Source/RatkiniaProtocol/: Cts.pb.cc  Cts.pb.h  CtsMessageType.gen.h  CtsProxy.gen.h  CtsStub.gen.h  RatkiniaProtocol.gen.h  Stc.pb.cc  Stc.pb.h  StcMessageType.gen.h  StcProxy.gen.h  StcStub.gen.h
Source/Registrar/: ComponentRegistrar.cpp  ComponentRegistrar.h  EventRegistrar.cpp  EventRegistrar.h  GlobalObjectRegistrar.cpp  GlobalObjectRegistrar.h  SystemRegistrar.cpp  SystemRegistrar.h
Source/System/: S_Auth.cpp  S_Auth.h  S_PlayerCharacters_UnpossessOnDisconnected.cpp  S_PlayerCharacters_UnpossessOnDisconnected.h  SystemManager.h  SystemRegistrar.cpp  SystemRegistrar.h
Source/System/Initializer/: S_Initializer_PlayerCharacters.cpp  S_Initializer_PlayerCharacters.h
Source/Util/MemoryPool/: FreeListPool.h  IndexedUnmanagedList.h  MakeIterableFromThis.h  SparseArray.h  SparseList.h
Sources/: Aligned.h  AuthJob.h  AuthServer.cpp  AuthServer.h  AuthServerChannel.cpp  AuthServerChannel.h  CTS.pb.cc  CTS.pb.h  CTS_Auth.pb.cc  CTS_Auth.pb.h  Channel.cpp  Channel.h  Cts.pb.cc  Cts.pb.h  CtsHandler.cpp  CtsHandler.h  CtsProxy.gen.h  CtsStub.cpp  CtsStub.gen.h  CtsStub.h  Database.h  ErrorMacros.h  Errors.h  GameServer.cpp  GameServer.h  GameServerChannel.cpp  GameServerChannel.h  GameServerMessageQueue.cpp  GameServerMessageQueue.h  GameServerPipe.cpp  GameServerPipe.h  GameServerTerminal.cpp  GameServerTerminal.h  Main.cpp  MainServer.cpp  MainServer.h  MainServerChannel.cpp  MainServerChannel.h  MainServerPipe.cpp  MainServerPipe.h  (+31 more)
